Fixed flashcard height on feed posts + email text decoration issue (7040)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -327,6 +327,11 @@
                     padding-top: 5px;
                 }
             }
+
+            .flashcard-element md-icon{
+                width: 44px;
+                height: 36px;
+            }
         }
     }
 
