--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -707,7 +707,7 @@
             min-width: 300px;
         }
 
-        .files .file, .quizzes .quiz {
+        .files .file-element, .quizzes .quiz-element {
             @media(min-width: 600px) {
                 padding: 20px;
             }
