--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Flashcards.cshtml
@@ -1,5 +1,5 @@
 ﻿<div>
     <div class="quizzes" layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="f.loadFlashcard()">
-        <div class="quiz" flex-xs="50" flex-xl="20" flex="25" flex-sm="50" flex-md="50" ng-repeat="e in f.flashcard" ng-include="'flashcard-template.html'"></div>
+        <div class="quiz-element" flex-xs="50" flex-xl="20" flex="25" flex-sm="50" flex-md="50" ng-repeat="e in f.flashcard" ng-include="'flashcard-template.html'"></div>
     </div>
 </div>
