--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -56,9 +56,13 @@
         font-size: 11px;
         font-weight: 300;
         border-radius: 12px;
+        .displayFlex;
+        .align-items(center);
+        .justifyContet(center);
         //color: @textColorWhite;
-        padding: 4px 9px;
+        padding: 0 6px;
         height: 24px;
+        min-width: 24px;
         background-color: @backgroundColorRed;
         color: @textColorWhite;
     }
