--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -258,7 +258,9 @@
         .align-items(center);
         .justifyContet(center);
         flex-shrink: 0;
-        padding: 0 7px;
+        padding: 0 6px;
+        height: 18px;
+        min-width: 18px;
         background-color: #F3565D;
     }
 }
