--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -48,7 +48,7 @@
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in d.boxes track by e.id" class="flex">
         <div class="box-cube">
             <div ng-include="'box-template.html'"></div>
-            <div class="updates" ng-if="e.updates !== 0">{{e.updates}}</div>
+            <div class="updates" ng-if="e.updates !== 0"><span ng-bind="e.updates"></span></div>
             <md-menu>
                 <button type="button" class="md-icon-button delete" ng-click="$mdOpenMenu($event)" @*open-menu="$mdOpenMenu($event)"*@ ga-track-event="['dashboard', 'deleteBoxMenu']">
                     <md-icon md-svg-icon="t:ThreeDots" class="dots-3"></md-icon>
