--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -1,5 +1,5 @@
 ﻿@import "variables.less";
-@actionsNavHeight: 60px;
+@actionsNavHeight: 90px;
 
 md-menu-item {
     .fb-like svg {
@@ -665,7 +665,8 @@ md-menu-item {
 
     .side-ad {
         position: fixed;
-        right: ~"calc(50% - 650px)";
+        //right: ~"calc(50% - 650px)";
+        left: ~"calc(50% - 700px)";
         top: @heightOfHeader + @actionsNavHeight + 5;
         width: 160px;
         height: 600px;
