Added like count in boxes quiz page.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/TermsOfService.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/TermsOfService.cshtml
@@ -9,7 +9,7 @@
     <div class="terms page-content">
         <h1 class="headline">Terms of Service</h1>
         <div class="content">
-            <div @*class="lastModified"*@>Last Modified 5/13/2015</div>
+            <div >Last Modified 5/13/2015</div>
             <div id="google_translate_element"></div>
             <p>These terms of service govern your access to and use of Spitball websites and services (the "Services"), so please carefully read them before using the Services.</p>
 
