--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
@@ -48,13 +48,13 @@
                 <li id="apps">
                     <a href="@Url.RouteUrl("Apps")">@HomePageResources.A11</a>
                 </li>
-                @if (ViewBag.promoEnable)
+                @*@if (ViewBag.promoEnable)
                 {
                     <li class="pipe"></li>
                 <li id="promo">
                         <a href="@Url.RouteUrl("Promotion")">@HomePageResources.A12</a>
                     </li>
-                }
+                }*@
 
                 <li class="language">
                     @if (!User.Identity.IsAuthenticated)
