Removed flashcard promotion stuff from project

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
@@ -205,7 +205,7 @@ iframe {
             text-transform: capitalize;
         }
 
-        #promo {
+        /*#promo {
 
 
             a, a.active {
@@ -215,7 +215,7 @@ iframe {
                     font-weight: bold;
                 }
             }
-        }
+        }*/
 
         .dropdown-menu li button:hover {
             text-decoration: none;
@@ -1509,7 +1509,7 @@ iframe {
     }
 }
 
-.promo-page, .homePage {
+/*.promo-page,*/ .homePage {
     .home-page-body {
         background-attachment: scroll;
         background-repeat: no-repeat;
@@ -1647,7 +1647,7 @@ iframe {
     }
 }
 
-.promo-page {
+/*.promo-page {
     color: @textColorBlack;
 
     .page-content {
@@ -2122,7 +2122,7 @@ iframe {
             }
         }
     }
-}
+}*/
 
 .boxes {
     width: 100%;
