removed flashcard promo ad from flashcard page

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1126,7 +1126,7 @@
     height: auto;
 }
 
-.promo-ad {
+/*.promo-ad {
     width: 700px;
     max-width: ~"calc(100% - 100px)";
     height: 90px;
@@ -1294,7 +1294,7 @@
             }
         }
     }
-}
+}*/
 
 .share-dialog {
     @dialogPadding: 24px;
