--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -1298,204 +1298,175 @@
   max-width: 100%;
   height: auto;
 }
-.promo-ad {
-  width: 700px;
-  max-width: calc(100% - 100px);
-  height: 90px;
-  margin: 0 auto;
-  background: #4190b9;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  align-self: center;
-  position: relative;
-}
-@media (max-width: 850px) {
-  .promo-ad {
-    height: 10.5vw;
-    min-height: 70px;
-  }
-}
-.promo-ad md-icon {
-  width: 18px;
-  height: 18px;
-  color: #FFCB0B;
-  margin: 0 10px;
-}
-@media (max-width: 850px) {
-  .promo-ad md-icon {
-    width: 16px;
-    height: 16px;
-    margin: 0 8px;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad md-icon {
-    margin: 0 5px;
-    width: 4vw;
-    height: 4vw;
-  }
-}
-.promo-ad .text,
-.promo-ad .button {
-  padding-right: 25px;
-}
-@media (max-width: 850px) {
-  .promo-ad .text,
-  .promo-ad .button {
-    padding-right: 3vw;
-  }
-}
-.promo-ad .text {
-  color: #ffffff;
-  flex-grow: 1;
-  text-align: center;
-  padding-left: 146px;
-}
-@media (max-width: 850px) {
-  .promo-ad .text {
-    padding-left: 19vw;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .text {
-    padding: 5px;
-    height: 100%;
-  }
-}
-.promo-ad .text h1 {
-  margin: 0;
-  font-size: 38px;
-  font-weight: bold;
-}
-@media (max-width: 850px) {
-  .promo-ad .text h1 {
-    font-size: 4.1vw;
-  }
-}
-@media (max-width: 600px) {
-  .promo-ad .text h1 {
-    display: none;
-  }
-}
-.promo-ad .text .text-line {
-  font-size: 18px;
-}
-@media (min-width: 600px) {
-  .promo-ad .text .text-line {
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-@media (max-width: 850px) {
-  .promo-ad .text .text-line {
-    font-size: 2.5vw;
-  }
-}
-@media (max-width: 600px) {
-  .promo-ad .text .text-line {
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    font-size: 2.75vw;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .text .text-line {
-    flex-direction: column;
-    margin: 0;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    height: 100%;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .text .text-line .start {
-    font-weight: bold;
-    font-size: 5.3vw;
-    line-height: normal;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .text .text-line .end {
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-.promo-ad .text .text-line .share {
-  display: inline-block;
-  line-height: normal;
-}
-@media (max-width: 530px) {
-  .promo-ad .text .text-line .share {
-    font-size: 4vw;
-  }
-}
-.promo-ad .button {
-  padding-left: 25px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-}
-@media (max-width: 850px) {
-  .promo-ad .button {
-    padding-left: 3vw;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .button {
-    position: static;
-    padding: 0 1.5vw;
-  }
-}
-.promo-ad .button .content {
-  color: #212325;
-  background: #ffcb0b;
-  padding: 8px 14px;
-  border-radius: 10px;
-  font-size: 16px;
-  font-weight: bold;
-  white-space: nowrap;
-}
-@media (max-width: 850px) {
-  .promo-ad .button .content {
-    font-size: 2.1vw;
-    padding: 0.8vw 1.5vw;
-    border-radius: 1.2vw;
-  }
-}
-@media (max-width: 530px) {
-  .promo-ad .button .content {
-    padding: 5px 6px;
-    border-radius: 10px;
-    font-size: 3.5vw;
-    line-height: normal;
-  }
-}
+/*.promo-ad {
+    width: 700px;
+    max-width: ~"calc(100% - 100px)";
+    height: 90px;
+    margin: 0 auto;
+    background: @buttonColorBlue;
+    .displayFlex;
+    .align-items(center);
+    .justifyContet(space-between);
+    align-self: center;
+    position: relative;
+
+    @media(max-width: 850px) {
+        height: 10.5vw;
+        min-height: 70px;
+    }
+
+    md-icon {
+        width: 18px;
+        height: 18px;
+        color: #FFCB0B;
+        margin: 0 10px;
+
+        @media(max-width: 850px) {
+            width: 16px;
+            height: 16px;
+            margin: 0 8px;
+        }
+
+        @media(max-width: 530px) {
+            margin: 0 5px;
+            width: 4vw;
+            height: 4vw;
+        }
+    }
+
+    .text, .button {
+        padding-left: 25px;
+
+        @media(max-width: 850px) {
+            padding-left: 3vw;
+        }
+    }
+
+    .text {
+        color: @textColorWhite;
+        flex-grow: 1;
+        text-align: center;
+        padding-right: 146px;
+
+        @media(max-width: 850px) {
+            padding-right: 19vw;
+        }
+
+        @media(max-width: 530px) {
+            padding: 5px;
+            height: 100%;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 38px;
+            font-weight: bold;
+
+            @media(max-width: 850px) {
+                font-size: 4.1vw;
+            }
+
+            @media(max-width: 600px) {
+                display: none;
+            }
+        }
+
+        .text-line {
+            font-size: 18px;
+
+            @media(min-width: 600px) {
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(center);
+            }
+
+            @media(max-width: 850px) {
+                font-size: 2.5vw;
+            }
+
+            @media(max-width: 600px) {
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(center);
+                font-size: 2.75vw;
+            }
+
+            @media(max-width: 530px) {
+                flex-direction: column;
+                margin: 0;
+                .justifyContet(space-around);
+                height: 100%;
+            }
+
+            .start {
+                @media(max-width: 530px) {
+                    font-weight: bold;
+                    font-size: 5.3vw;
+                    line-height: normal;
+                }
+            }
+
+            .end {
+                @media(max-width: 530px) {
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
+                }
+            }
+
+            .share {
+                display: inline-block;
+                line-height: normal;
+
+                @media(max-width: 530px) {
+                    font-size: 4vw;
+                }
+            }
+        }
+    }
+
+    .button {
+        padding-right: 25px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        .displayFlex;
+        .align-items(center);
+
+        @media(max-width: 850px) {
+            padding-right: 3vw;
+        }
+
+        @media(max-width: 530px) {
+            position: static;
+            padding: 0 1.5vw;
+        }
+
+        .content {
+            color: @textColorBlack;
+            background: #ffcb0b;
+            padding: 8px 14px;
+            border-radius: 10px;
+            font-size: 16px;
+            font-weight: bold;
+            white-space: nowrap;
+
+            @media(max-width: 850px) {
+                font-size: 2.1vw;
+                padding: 0.8vw 1.5vw;
+                border-radius: 1.2vw;
+            }
+
+            @media(max-width: 530px) {
+                padding: 5px 6px;
+                border-radius: 10px;
+                font-size: 3.5vw;
+                line-height: normal;
+            }
+        }
+    }
+}*/
 .share-dialog {
   width: calc(100% - 20px);
   max-width: 520px;
