--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -36,7 +36,7 @@
                 <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
             </div>
         </div>
-        <div multiswitch-when="0" class="promo-ad" ng-click="f.details($event)" ng-if="f.flashcard.universityData">
+        @*<div multiswitch-when="0" class="promo-ad" ng-click="f.details($event)" ng-if="f.flashcard.universityData">
             <div class="text">
                 <h1>Flashcard Launch Contest</h1>
                 <div class="text-line">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <button ng-click="app.back(f.backUrl)" class="close-btn">
             <md-icon md-svg-icon="t:close"></md-icon>
         </button>
