--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -38,6 +38,10 @@
 @textColorDisabledActionButton: #83b6d0;
 @textColorDisabledCancelButton: #7d7d7d;
 @gamificationYellow: #ffce2f;
+@gamificationLightGreen: #91ca5a;
+@gamificationMediumGreen: #73b435;
+@gamificationGreen: #438604;
+@gamificationDarkGreen: #2a5501;
 
 ////backgrounds
 @backgroundColor: #dadada;
