--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.rtl.css
@@ -1,64 +1,71 @@
-.leaderboard {
-  width: 100%;
-}
-.leaderboard h4 {
-  font-size: 21px;
-  font-weight: 700;
-  margin-top: 0;
-  text-align: center;
-  margin-bottom: 10px;
-  color: #888b8e;
-}
-@media (min-width: 960px) {
-  .leaderboard h4 {
-    font-size: 1.2vw;
-  }
-}
-@media (min-width: 1200px) {
-  .leaderboard h4 {
-    font-size: 1.2vw;
-  }
-}
-.leaderboard .userLetter {
-  font-size: 17px;
-}
-.leaderboard .user-name {
-  -ms-text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  width: calc(100% - 50px);
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  vertical-align: middle;
-  color: #212325;
-}
-.leaderboard .img-circle {
-  margin-left: 10px;
-}
-.leaderboard .r-table {
-  text-align: center;
-  font-size: 12px;
-  width: 100%;
-}
-.leaderboard .r-table-row {
-  height: 40px;
-  line-height: 40px;
-}
-.leaderboard .r-table-cell {
-  width: calc(100% - 75px);
-  text-align: right;
-  color: #ffa500;
-}
-.leaderboard .r-table-cell:nth-child(even) {
-  width: 15px;
-  text-align: center;
-}
-.leaderboard .r-table-cell.last {
-  text-align: left;
-  white-space: nowrap;
-  color: #212325;
-}
+/*.leaderboard {
+    width: 100%;
+
+    h4 {
+        font-size: 21px;
+        font-weight: 700;
+        margin-top: 0;
+        text-align: center;
+        margin-bottom: 10px;
+        color: @textColorGrey;
+
+        @media (min-width:960px) {
+            font-size: 1.2vw;
+        }
+
+        @media (min-width:1200px) {
+            font-size: 1.2vw;
+        }
+    }
+
+    .userLetter {
+        font-size: 17px;
+    }
+
+    .user-name {
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        width: ~"calc(100% - 50px)";
+        display: inline-block;
+        overflow: hidden;
+        white-space: nowrap;
+        vertical-align: middle;
+        color: @textColorBlack;
+    }
+
+    .img-circle {
+        margin-right: 10px;
+    }
+
+    .r-table {
+        text-align: center;
+        font-size: 12px;
+        width: 100%;
+    }
+
+    .r-table-row {
+        height: 40px;
+        line-height: 40px;
+    }
+
+    .r-table-cell {
+        width: ~"calc(100% - 75px)";
+        text-align: left;
+        color: @textColorOrange;
+
+        &:nth-child(even) {
+            width: 15px;
+            text-align: center;
+        }
+
+        &.last {
+            text-align: right;
+            white-space: nowrap;
+            color: @textColorBlack;
+        }
+    }
+}*/
 .leaderboardbox {
   display: -webkit-flex;
   display: -ms-flex;
@@ -69,10 +76,11 @@
   justify-content: space-between;
   flex-direction: column;
   position: relative;
-  background: #ffce2f;
+  background: #73b435;
 }
 .leaderboardbox .bg-l,
 .leaderboardbox .bg-r {
+  display: none;
   height: 90px;
   top: 0;
   z-index: 0;
@@ -98,66 +106,7 @@
   filter: FlipH;
   -ms-filter: "FlipH";
 }
-.leaderboardbox .top .points {
-  text-align: center;
-  padding-bottom: 35px;
-}
-.leaderboardbox .top .points-wrapper {
-  display: inline-block;
-  font-size: 38px;
-  position: relative;
-  padding: 5px 18px 24px 18px;
-  color: #ffce2f;
-  background: #323538;
-  border-radius: 0 0 10px 10px;
-  font-weight: bold;
-  min-width: 60%;
-}
-.leaderboardbox .top .points-wrapper span:not(.number) {
-  position: absolute;
-  font-size: 12px;
-  bottom: 6px;
-  width: 100%;
-  right: 0;
-  text-transform: capitalize;
-}
-.leaderboardbox .top .text {
-  text-align: center;
-  font-size: 14px;
-  margin: 14px 0;
-  position: absolute;
-  top: 66px;
-  width: 100%;
-}
-.leaderboardbox .top .custom-progress-bar {
-  height: 14px;
-  border-radius: 7px;
-  overflow: hidden;
-  padding: 0 10px;
-}
-.leaderboardbox .top .custom-progress-bar.md-default-theme .md-container,
-.leaderboardbox .top .custom-progress-bar .md-container {
-  border-radius: 7px;
-}
-.leaderboardbox .top .custom-progress-bar.md-default-theme .md-container,
-.leaderboardbox .top .custom-progress-bar .md-bar,
-.leaderboardbox .top .custom-progress-bar .md-container {
-  height: 14px;
-}
-.leaderboardbox .top .custom-progress-bar .md-container {
-  background: #eeeeee;
-  height: 14px;
-}
-.leaderboardbox .top .custom-progress-bar .md-container .md-bar {
-  background: #5d6d7e;
-}
-.leaderboardbox .top .custom-progress-bar .md-container .md-bar {
-  border-radius: 5px;
-}
-.leaderboardbox .top .custom-progress-bar .md-container {
-  box-shadow: inset 0 0 7px 0 rgba(0, 0, 0, 0.35);
-}
-.leaderboardbox .bottom {
+.leaderboardbox .content {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -165,24 +114,40 @@
   align-items: center;
   -webkit-justify-content: space-between;
   justify-content: space-between;
-  padding: 10px;
-  background: #eeeeee;
+  height: 100%;
+  padding: 16px;
 }
-.leaderboardbox .bottom .level,
-.leaderboardbox .bottom .badges {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+.leaderboardbox .content .data-side {
+  flex-grow: 1;
+  padding-right: 20px;
+  height: 100%;
 }
-.leaderboardbox .bottom .icon {
-  width: 30px;
-  height: 30px;
-  background: rgba(255, 206, 47, 0.5);
-  margin-left: 5px;
+.leaderboardbox .content .data-side .name-level {
+  color: #ffffff;
+}
+.leaderboardbox .content .data-side .name-level .level {
+  color: #ffce2f;
+}
+.leaderboardbox .content .data-side .custom-progress-bar {
+  height: 22px;
+  border-radius: 11px;
+  overflow: hidden;
+}
+.leaderboardbox .content .data-side .custom-progress-bar.md-default-theme .md-container,
+.leaderboardbox .content .data-side .custom-progress-bar .md-container {
+  border-radius: 11px;
+}
+.leaderboardbox .content .data-side .custom-progress-bar.md-default-theme .md-container,
+.leaderboardbox .content .data-side .custom-progress-bar .md-bar,
+.leaderboardbox .content .data-side .custom-progress-bar .md-container {
+  height: 22px;
+}
+.leaderboardbox .content .data-side .custom-progress-bar .md-container {
+  background: #438604;
+  height: 22px;
+}
+.leaderboardbox .content .data-side .custom-progress-bar .md-container .md-bar {
+  background: #91ca5a;
 }
 .promo-box {
   display: -webkit-flex;
