--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -1,6 +1,14 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @model Zbang.Cloudents.Mvc4WebRole.Models.Gamification
 <div class="badges-wrapper">
+    <div>
+        <span>rank2</span>
+        <md-progress-circular md-mode="determinate" value="{{50}}"></md-progress-circular>
+        <user-image class="img-circle" name="::e.name" image="::e.image" width="35" height="35"></user-image>
+        <span>points</span>
+        <span>username</span>
+        <span>level</span>
+    </div>
     <div class="badges-bar">
         <md-tabs class="badges-tabs" md-dynamic-height="true" md-stretch-tabs="always">
             <md-tab ui-sref="user.badge({type:'level'})" md-active="g.isActive('level')">
@@ -14,6 +22,7 @@
             </md-tab>
         </md-tabs>
     </div>
+
     <div class="badges-tab-content" ng-switch="$state.params['type']">
         <div ng-switch-when="level" class="tab levels">
             <ul>
@@ -23,21 +32,50 @@
                         @{ string progress = "g.levels.l" + level.Index + ".progress"; }
                         <div class="title">
                             <div class="image">
-                                <img ng-if="@progress===0" src="@Url.CdnContent("/images/gamification/level_" + level.Name + "_hidden.png")" alt="@level.Name" />
-                                <img ng-if="@progress!==0" src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name" />
+                                @*<img ng-if="@progress===0" src="@Url.CdnContent("/images/gamification/level_" + level.Name + "_hidden.png")" alt="@level.Name"/>*@
+                                <img ng-class="{inprogress: progress!==0}" @*ng-if="@progress!==0"*@ src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name"/>
                             </div>
                             <div class="name">@level.Name</div>
                         </div>
                         <div class="body">
                             @level.Description
-                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
+                            <div class="progress">
+                                <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}">
+                                </md-progress-linear>
+                                {{@progress}}% complete
+                            </div>
                         </div>
                     </li>
-                            }
+                }
 
             </ul>
         </div>
-        <div ng-switch-when="badge" class="tab badges">
+        <div ng-switch-when="badge" class="tab levels">
+            <ul>
+                @foreach (var level in Model.Badges)
+                {
+                    <li class="level">
+                        @{ string progress = "g.badges." + level.BadgeSystem + ".progress"; }
+                        <div class="title">
+                            <div class="image">
+                                @*<img ng-if="@progress===0" src="@Url.CdnContent("/images/gamification/level_" + level.Name + "_hidden.png")" alt="@level.Name" />*@
+                                <img ng-class="{inprogress: @progress!==100}" src="@Url.CdnContent("/images/gamification/badge_" + level.Name + ".png")" alt="@level.Name" />
+                            </div>
+                            <div class="name">@level.Name</div>
+                        </div>
+                        <div class="body">
+                            @level.Description
+                            <div class="progress">
+                                <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}">
+                                </md-progress-linear>
+                                {{@progress}}% complete
+                            </div>
+                        </div>
+                    </li>
+                }
+            </ul>
+        </div>
+        @*<div ng-switch-when="badge" class="tab badges">
             <div class="badges-container" ng-if="!g.badgeInfo">
                 <div class="wrapper" ng-repeat="badge in ::g.badges">
                     <div class="badge-container" ng-click="g.showBadge(badge)">
@@ -56,7 +94,7 @@
                     <md-icon ng-class="{disabled: !g.badgeInfo.prev}" ng-click="g.showBadge(g.badgeInfo.prev)" md-svg-icon="p:arrow-right"></md-icon>
                 </div>
                 <div class="badge-container">
-                    
+
                     <md-icon md-svg-icon="p:checkmark" ng-if="g.badgeInfo.data.progress === 100"></md-icon>
                     <img class="image" ng-if="g.badgeInfo.data.progress === 100" ng-src="{{g.badgeInfo.data.image}}" alt="{{g.badgeInfo.data.name}}" />
                     <img class="image" ng-if="g.badgeInfo.data.progress !== 100" ng-src="{{g.badgeInfo.data.imageHidden}}" alt="{{g.badgeInfo.data.name}}" />
@@ -74,9 +112,10 @@
                 </div>
                 <md-icon class="close" md-svg-icon="t:close" ng-click="g.badgeInfo=false"></md-icon>
             </div>
-        </div>
+        </div>*@
         <div ng-switch-when="community" class="tab community" srph-infinite-scroll="g.loadMoreLeaderboard()">
-            @{ // ReSharper disable once Mvc.PartialViewNotResolved
+            @{
+                // ReSharper disable once Mvc.PartialViewNotResolved
                 Html.RenderPartial("_LeaderBoard");}
         </div>
     </div>
